--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/design.css" rel="stylesheet">
+    <link href="/styles.css" rel="stylesheet">
     <title> Cash Register </title>
 </head>
 
@@ -20,7 +20,7 @@
         <label for="cash-given"> Cash Given </label>
         <input id="cash-given" type="number">
         <button id="check-button"> Check </button>
-        <p id="error-message"></p>
+        <p id="error-message" class="error error-message">Invalid Bill Amount</p>
         <table class="change-table">
             <caption> Return Change </caption>
             <tr>
@@ -45,13 +45,13 @@
             </tr>
         </table>
         <footer class="footer">
-            <div class="footer-header">You can find me here</div>
+            <div class="footer-header">You Can Find Me Here</div>
             <ul class="social-links list-non-bullet">
                 <li class="list-item-inline">
-                    <a class="link" href="https://instagram.com/shivamlahane9973">Instagram</a>
+                    <a class="link" href="https://instagram.com/shivamlahane9973">INSTAGRAM</a>
                 </li>
                 <li class="list-item-inline">
-                    <a class="link" href="https://github.com/Shivam9973">GitHub</a>
+                    <a class="link" href="https://github.com/Shivam9973">GITHUB</a>
                 </li>
             </ul>
         </footer>
